--- a/react-whispering-oaks/src/App.css
+++ b/react-whispering-oaks/src/App.css
@@ -2,5 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Encode Sans Expanded", sans-serif;
+  font-family: "Bona Nova", "Trebuchet MS", "Lucida Sans Unicode",
+    "Lucida Grande", "Lucida Sans", Arial, sans-serif serif;
 }
